# Didacticoop

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: UtilsMacros.cmake  script_BuildInstall.cmake  script_BuildPackage.cmake  script_init_cmake.cmake
apps/: CMakeLists.txt  README.md
apps/Didacti-coop_gui/: CMakeLists.txt  didacticoop.cpp  didacticoop.h  didacticoop.qrc  didacticoop.ui  didacticoop_hooke.cpp  didacticoop_hooke.h  guide.qrc  main.cpp  tools.cpp  tools.h  tools.ui
apps/Didacti-coop_gui/guide/: guidaHooke.html  guidaHooke_ita.html
apps/Didacti-coop_gui/settings/: settings.ini
apps/serial_console/: CMakeLists.txt  main.cpp  resources.rc  serial_console.cpp  serial_console.h  serial_console.ui
